Main/selectFighter html pages

--- a/app/main.html
+++ b/app/main.html
@@ -1,4 +1,12 @@
 <html>
 <h1>{{welcome_msg}}</h1>
+<form action="selectFighter"> 
+	<input type="submit" value="Play now!">
+</form>
+
+
+
+
+
 <script src="main.js"></script>
 </html>
