--- a/app/selectFighter.html
+++ b/app/selectFighter.html
@@ -1,4 +1,9 @@
 <html>
+<head>
+<link rel="stylesheet" type="text/css" href="css/main.css">
+<script src="main.js"></script>
+
+</head>
 <h1>Fighter Select</h1>
 <p> {{error_msg}} </p>
 <form action="process_fighter">
