--- a/app/main.html
+++ b/app/main.html
@@ -1,12 +1,28 @@
 <html>
+<head>
+
+<script src="/app/main.js"></script>
+<style>
+
+</style>
+
+
+
+</head>
 <h1>{{welcome_msg}}</h1>
+<body>
+<div id="wrap">
+
 <form action="selectFighter"> 
+	<input type="hidden" value={{uid}}>
 	<input type="submit" value="Play now!">
 </form>
 
+</div>
+</body>
 
 
 
 
-<script src="main.js"></script>
+
 </html>
