--- a/app/main.html
+++ b/app/main.html
@@ -10,14 +10,14 @@
 
 </head>
 <h1>{{welcome_msg}}</h1>
-<<<<<<< HEAD
+
 <script src="/app/main.js"></script>
-=======
+
 <body>
 <div id="wrap">
 
 <form action="selectFighter"> 
-	<input type="hidden" value={{uid}}>
+	<input type="hidden" value="{{uid}}">
 	<input type="submit" value="Play now!">
 </form>
 
@@ -28,5 +28,5 @@
 
 
 
->>>>>>> fe965daf983229a077b98f88e4d399855a6e7a4a
+
 </html>
