Added name to input field

--- a/app/main.html
+++ b/app/main.html
@@ -17,7 +17,7 @@
 <div id="wrap">
 
 <form action="selectFighter"> 
-	<input type="hidden" value="{{uid}}">
+	<input name="uid" type="hidden" value="{{uid}}" >
 	<input type="submit" value="Play now!">
 </form>
 
