--- a/app/main.html
+++ b/app/main.html
@@ -16,7 +16,7 @@
 <body>
 <div id="wrap">
 
-<form action="selectfighter"> 
+<form action="selectfighter" method="POST"> 
 	<input name="uid" type="hidden" value="{{uid}}" >
 	<input type="submit" value="Play now!">
 </form>
