--- a/app/selectFighter.html
+++ b/app/selectFighter.html
@@ -6,8 +6,9 @@
 </head>
 <h1>Fighter Select</h1>
 <p> {{error_msg}} </p>
-<form action="process_fighter">
-	<input type="text" name"fighter_name"><br>
+<form action="process_fighter" method="POST">
+	<input name="uid" type="hidden" value="{{uid}}">
+	<input type="text" name="fighter_name"><br>
 	<input type="submit" value="Select Fighter">
 </form>
 
