Naming convention update
All link and html file names are not underscore.

--- a/app/main.html
+++ b/app/main.html
@@ -16,7 +16,7 @@
 <body>
 <div id="wrap">
 
-<form action="selectfighter" method="POST"> 
+<form action="select_fighter" method="POST"> 
 	<input name="uid" type="hidden" value="{{uid}}" >
 	<input type="submit" value="Play now!">
 </form>
