--- a/app/main.html
+++ b/app/main.html
@@ -10,14 +10,14 @@
 
 </head>
 <h1>{{welcome_msg}}</h1>
+<h2>{{n_players}} in database</h2>
 
 <script src="/app/main.js"></script>
 
 <body>
 <div id="wrap">
 
-<form action="select_fighter" method="POST"> 
-	<input name="uid" type="hidden" value="{{uid}}" >
+<form action="select_fighter" method="GET"> 
 	<input type="submit" value="Play now!">
 </form>
 
