--- a/app/select_fighter.html
+++ b/app/select_fighter.html
@@ -4,7 +4,7 @@
 <script src="main.js"></script>
 
 </head>
-<h1>Fighter Select</h1>
+<h1>Please name a fighter</h1>
 <p> {{error_msg}} </p>
 <form action="process_fighter" method="POST">
 	<input name="uid" type="hidden" value="{{uid}}">
