--- a/app/index.htm
+++ b/app/index.htm
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" href="style.css">
 <body>
 	
-	<h1> Pocket Fighter Battle! </h>
-	<p> To play, choose one of the 4 abilities to attack the other opponent. The first person's pocket fighter who reaches 0 health loses. </p>
+	<h1 class="intro"> Pocket Fighter Battle! </h>
+	<p class="info"> To play, choose one of the 4 abilities to attack the other opponent. The first person's pocket fighter who reaches 0 health loses. </p>
 
 	<!--The 4 buttons to attack and the forfeit button. Links need to be changed 
 	from pokemon to their respective needs. Attack names should be a variable for 
@@ -24,6 +24,7 @@
 	<p id = "fighter2" class = "name2"> Kanye West </p>
 	<p class = "extra1"> Level 11 </p>
 	<p class = "extra2"> Level 10 </p>
+	
 	
 	<!--The scrolling photos and their speed. img should be a variable for any 
 	celebrity image.-->
