--- a/app/main.html
+++ b/app/main.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 
-<script src="/app/main.js"></script>
+<script src="app/main.js"></script>
 <style>
 
 </style>
@@ -9,16 +9,16 @@
 
 
 </head>
-<h1>{{welcome_msg}}</h1>
-<h2>{{n_players}} in database</h2>
+<h1>Welcome to Pocket Fighter</h1>
+<h2>{{n_players}} players logged in database</h2>
 
-<script src="/app/main.js"></script>
+<script src="app/main.js"></script>
 
 <body>
 <div id="wrap">
 
 <form action="select_fighter" method="GET"> 
-	<input type="submit" value="Play now!">
+	<input type="submit" value="Play Now!">
 </form>
 
 </div>
