--- a/app/wait_match.html
+++ b/app/wait_match.html
@@ -77,7 +77,7 @@
     </head>
     <body onload="first()" class="center">
 		<p>Waiting for match...</p>
-        <img id="loader" src="app/media/matchloader.gif">
+        <img id="loader" src="/media/matchloader.gif">
         <canvas id="ani"></canvas>
 		<form action="fight" id="form" method="POST">
 			<input id="uid" name="uid" type="hidden" value="{{uid}}">
