--- a/app/index.htm
+++ b/app/index.htm
@@ -29,8 +29,8 @@
 	<!--The scrolling photos and their speed. img should be a variable for any 
 	celebrity image.-->
 	<div id="photos">
-		<marquee behavior="slide" class = "photo2" scrollamount = "120" direction="right"><img src="kanye.jpg" width="500" height="350" alt="Player 1" /></marquee>
-		<marquee behavior="slide" class = "photo1" scrollamount = "120" direction="left"><img src="taylor.jpg" width="500" height="350" alt="Player 2" /></marquee>
+		<marquee behavior="slide" class = "photo2" scrollamount = "120" direction="right"><img src="kanye.jpg" width= "15%" height="15%" alt="Player 1" /></marquee>
+		<marquee behavior="slide" class = "photo1" scrollamount = "120" direction="left"><img src="taylor.jpg" width="12%" height="15%" alt="Player 2" /></marquee>
 	</div>
 	
 	<!--Here are the health bars. Change values variables for changes in health.-->
