--- a/app/fight.html
+++ b/app/fight.html
@@ -20,8 +20,8 @@
 	
 	<!--The title names and levels arounds the health bar. Names need to be variables
 	to be different celebs. Levels needs to be changed to whatever we want to use it for.-->
-	<p id = "fighter1" class = "name1"> Taylor Swift </p>
-	<p id = "fighter2" class = "name2"> Kanye West </p>
+	<p id = "fighter1" class = "name1"> {{match.player1.fighter.name}} </p>
+	<p id = "fighter2" class = "name2"> {{match.player2.fighter.name}} </p>
 	<p class = "extra1"> Level 11 </p>
 	<p class = "extra2"> Level 10 </p>
 	
