--- a/app/index.htm
+++ b/app/index.htm
@@ -3,7 +3,7 @@
 <head>
 	<title> Pocket Fighters </title>
 </head>
-	<link rel="stylesheet" href="app/style.css">
+	<link rel="stylesheet" href="style.css">
 <body>
 	
 	<h1 class="intro"> Pocket Fighter Battle! </h1>
